SBVTestSuite/TestSuite/CompileTests/PCase/PCase46.stderr
PCase46.hs:18:15: error: [GHC-40910] [-Wunused-local-binds, Werror=unused-local-binds]
    Defined but not used: b
   |
18 |     |- [pCase|Expr e of
   |               ^^^^^^^^^...

PCase46.hs:18:15: error: [GHC-40910] [-Wunused-local-binds, Werror=unused-local-binds]
    Defined but not used: a
   |
18 |     |- [pCase|Expr e of
   |               ^^^^^^^^^...

